--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,11 @@ p {
     background-size: cover;
     background-size: 100% 100%;
 }
+
+/* 添加hover */
+.m2__shadow :hover{
+    cursor: pointer;
+    border-radius: 14px;
+    background: #FFFFFF;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
